...
    <string name="category_placeholder">e.g. Recipes</string>
    <string name="topic">Topic</string>
    <string name="topic_placeholder">e.g. Pies</string>
    <string name="lists_for">Lists needed for…</string>
    <string name="lists_for_placeholder">e.g. Apple Pie</string>
    <string name="create">Create</string>
    <string name="cancel">Cancel</string>
    <string name="optional">Optional</string>
    <string name="error_message_no_category">&#x2A;Please provide a category</string>
    <string name="error_message_duplicate_category">&#x2A;Unique category required</string>
    <string name="error_message_no_initial_list">Please provide initial list.</string>

    <string name="topic_subtitle">Topic: </string>

    <!--Deletion Dialog-->
    <string name="deletion_message">You are about to delete\n</string>
    <string name="delete">Delete</string>

    <!-- Add Owner Dialog-->
    <string name="add_owner_message">Add an owner of a new list this category.</string>
    <string name="new_owner">New owner</string>
    <string name="add_owner">Add owner</string>
    <string name="error_duplicate_owner">&#x2A;Unique owner required</string>
    <string name="error_message_no_owner">&#x2A;Please provide an owner</string>
    <string name="add_items_hint">To add items.</string>

    <!-- Delete Owner Dialog -->
    <string name="delete_owner_message">Deleting %1$s and all listed items.</string>
    <string name="delete_last_owner_message">This is only list for the category. Please delete category from home screen if list is unnecessary.</string>
    <string name="ok">@android:string/ok</string>

    <!--Content Description-->
    <string name="icon_cdescript">add icon</string>
    <string name="icon_delete_cdescript">delete icon</string>
    <string name="icon_delete_dialog_cdescript">dialog delete icon</string>
    <string name="icon_delete_list_cdescript">delete list icon</string>
    <string name="icon_delete_owner_cdescript">delete owner icon</string>
    <string name="icon_delete_owner_button_cdescript">delete owner icon button</string>
    <string name="icon_add_listitem_cdescript">add item icon </string>
    <string name="icon_add_listitem_button_cdescript">add item icon button</string>
    <string name="icon_add_owner_cdescript">add owner icon</string>
    <string name="add_owner_button_cdescript">add item button</string>
    <string name="add_item_success_message_icon">add success icon</string>
    <string name="category_icon">category icon</string>
    <string name="switch_for_checkbox_cdescript">switch to toggle to checkbox</string>
    <string name="status_checkbox_cdescript">status checkbox</string>

    <!-- Modify Items -->
...
